--- a/views/game.ejs
+++ b/views/game.ejs
@@ -12,6 +12,9 @@
     <div class="container">
       <div class="block-center">
         <div class="row">
+          <h3 class="text-center" id="player-turn"></h3>
+        </div>
+        <div class="row">
           <div class="square" id="1"></div>
           <div class="square" id="2"></div>
           <div class="square" id="3"></div>
